# otus-cpp-lesson-6-allocator

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
include/: version.h.in
src/: main.cpp
